--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,9 +3,12 @@ members = [
     "compositor",
     "agent",
     "context",
+    "sys",
 ]
 
 
 [workspace.dependencies]
-bindgen = "0.69.1"
+wgpu = "0.18.0"
+tracing = "0.1"
+tracing-subscriber = "0.3"
 
